--- a/lecm-business-journal/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/business-journal/toolbar/toolbar.get_ru.properties
+++ b/lecm-business-journal/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/business-journal/toolbar/toolbar.get_ru.properties
@@ -21,3 +21,7 @@ menu.selected-items.deselect-all=\u041E\u0442\u043C\u0435\u043D\u0438\u0442\u044
 
 button.export-csv=\u042D\u043A\u0441\u043F\u043E\u0440\u0442 CSV
 
+form.control.date-picker.choose=\u0412\u044B\u0431\u0435\u0440\u0438\u0442\u0435 \u0434\u0430\u0442\u0443
+form.control.date-picker.entry.date.format=d/M/yyyy
+form.control.date-picker.display.date.format=DD/MM/YYYY
+
