--- a/lecm-delegation/repo/src/main/config/messages/delegation_ru.properties
+++ b/lecm-delegation/repo/src/main/config/messages/delegation_ru.properties
@@ -15,6 +15,7 @@ lecm-d8n_delegation-model.association.lecm-d8n_delegation-opts-assoc.description
 
 #<type name="lecm-d8n:procuracy">
 lecm-d8n_delegation-model.type.lecm-d8n_procuracy.title=\u0414\u043e\u0432\u0435\u0440\u0435\u043d\u043d\u043e\u0441\u0442\u044c
+lecm-d8n_delegation-model.property.lecm-d8n_procuracy-can-transfer-rights.title=\u041f\u0435\u0440\u0435\u0434\u0430\u0432\u0430\u0442\u044c \u043f\u0440\u0430\u0432\u0430 \u043d\u0430 \u0434\u043e\u043a\u0443\u043c\u0435\u043d\u0442\u044b \u043f\u043e\u0434\u0447\u0438\u043d\u0435\u043d\u043d\u044b\u0445
 lecm-d8n_delegation-model.association.lecm-d8n_procuracy-business-role-assoc.title=\u0411\u0438\u0437\u043d\u0435\u0441 \u0440\u043e\u043b\u044c
 lecm-d8n_delegation-model.association.lecm-d8n_procuracy-business-role-assoc.description=\u0421\u0441\u044b\u043b\u043a\u0430 \u043d\u0430 \u0431\u0438\u0437\u043d\u0435\u0441 \u0440\u043e\u043b\u044c
 lecm-d8n_delegation-model.association.lecm-d8n_procuracy-trustee-assoc.title=\u0414\u043e\u0432\u0435\u0440\u0435\u043d\u043d\u043e\u0435 \u043b\u0438\u0446\u043e
