--- a/lecm-business-journal/share/src/main/java/ru/it/lecm/business-journal/form/form_ru.properties
+++ b/lecm-business-journal/share/src/main/java/ru/it/lecm/business-journal/form/form_ru.properties
@@ -20,3 +20,4 @@ lecm-busjournal-archiver-archiver-period-help-id=\u0417\u0430\u043F\u0443\u0441\
 message.alert.incorrect-date-format=\u041D\u0435\u043A\u043E\u0440\u0440\u0435\u043A\u0442\u043D\u044B\u0439 \u0444\u043E\u0440\u043C\u0430\u0442 \u0434\u0430\u0442\u044B\!
 message.alert.no-elements=\u041D\u0435\u0442 \u044D\u043B\u0435\u043C\u0435\u043D\u0442\u043E\u0432 \u0432 \u0441\u043F\u0440\u0430\u0432\u043E\u0447\u043D\u0438\u043A\u0435
 
+info.search.archive=\u0418\u0441\u043A\u0430\u0442\u044C \u0432 \u0430\u0440\u0445\u0438\u0432\u0435
