--- a/lecm-calendar/repo/src/main/config/messages/calendar_ru.properties
+++ b/lecm-calendar/repo/src/main/config/messages/calendar_ru.properties
@@ -33,11 +33,11 @@ lecm-absence_absence-model.association.lecm-absence_abscence-reason-assoc.title=
 #<type name="lecm-absence:reason">
 lecm-absence_absence-model.type.lecm-absence_reason.title=\u041f\u0440\u0438\u0447\u0438\u043d\u0430 \u043e\u0442\u0441\u0443\u0442\u0441\u0442\u0432\u0438\u044f
 #<property name="lecm-absence:denomination">
-lecm-absence_absence-model.type.lecm-absence_denomination.title=\u041d\u0430\u0438\u043c\u0435\u043d\u043e\u0432\u0430\u043d\u0438\u0435 \u043f\u0440\u0438\u0447\u0438\u043d\u044b
+lecm-absence_absence-model.property.lecm-absence_denomination.title=\u041d\u0430\u0438\u043c\u0435\u043d\u043e\u0432\u0430\u043d\u0438\u0435 \u043f\u0440\u0438\u0447\u0438\u043d\u044b
 #<property name="lecm-absence:code">
-lecm-absence_absence-model.type.lecm-absence_code.title=\u041a\u043e\u0434 \u043f\u0440\u0438\u0447\u0438\u043d\u044b
+lecm-absence_absence-model.property.lecm-absence_code.title=\u041a\u043e\u0434 \u043f\u0440\u0438\u0447\u0438\u043d\u044b
 #<property name="lecm-absence:color">
-lecm-absence_absence-model.type.lecm-absence_color.title=\u0426\u0432\u0435\u0442 \u0434\u043b\u044f \u043e\u0431\u043e\u0437\u043d\u0430\u0447\u0435\u043d\u0438\u044f
+lecm-absence_absence-model.property.lecm-absence_color.title=\u0426\u0432\u0435\u0442 \u0434\u043b\u044f \u043e\u0431\u043e\u0437\u043d\u0430\u0447\u0435\u043d\u0438\u044f
 
 #<model name="lecm-shed:shedule-model" 
 lecm-shed_shedule-model.title=\u0413\u0440\u0430\u0444\u0438\u043a \u0440\u0430\u0431\u043e\u0442\u044b
