--- a/lecm-calendar/share/src/main/java/ru/it/lecm/wcalendar/form/form_ru.properties
+++ b/lecm-calendar/share/src/main/java/ru/it/lecm/wcalendar/form/form_ru.properties
@@ -19,6 +19,8 @@ label.create-row.title=\u0421\u043e\u0437\u0434\u0430\u043d\u0438\u0435
 label.edit-row.title=\u0420\u0435\u0434\u0430\u043a\u0442\u0438\u0440\u043e\u0432\u0430\u0442\u044c \u044d\u043b\u0435\u043c\u0435\u043d\u0442
 label.working-days-section.title=\u0420\u0430\u0431\u043e\u0447\u0438\u0435 \u0434\u043d\u0438
 label.non-working-days-section.title=\u0412\u044b\u0445\u043e\u0434\u043d\u044b\u0435 \u0434\u043d\u0438
+label.calendar.create-new-working.title=\u041d\u043e\u0432\u044b\u0439 \u0440\u0430\u0431\u043e\u0447\u0438\u0439 \u0434\u0435\u043d\u044c
+label.calendar.create-new-non-working.title=\u041d\u043e\u0432\u044b\u0439 \u0432\u044b\u0445\u043e\u0434\u043d\u043e\u0439 \u0434\u0435\u043d\u044c
 
 message.new-row.success=\u042d\u043b\u0435\u043c\u0435\u043d\u0442 \u0441\u043e\u0437\u0434\u0430\u043d
 message.new-row.failure=\u041e\u0448\u0438\u0431\u043a\u0430 \u0441\u043e\u0437\u0434\u0430\u043d\u0438\u044f \u044d\u043b\u0435\u043c\u0435\u043d\u0442\u0430
@@ -48,7 +50,15 @@ label.shedule.form.month-days=\u0414\u043d\u0438 \u043c\u0435\u0441\u044f\u0446\
 label.shedule.form.shift-work.working-days=\u0420\u0430\u0431\u043e\u0447\u0438\u0445 \u0434\u043d\u0435\u0439
 label.shedule.form.shift-work.non-working-days=\u0412\u044b\u0445\u043e\u0434\u043d\u044b\u0445 \u0434\u043d\u0435\u0439
 label.shedule.form.reiteration-rules=\u041f\u0440\u0430\u0432\u0438\u043b\u0430 \u043f\u043e\u0432\u0442\u043e\u0440\u0435\u043d\u0438\u044f
+label.shedule.create-new-special.title=\u041d\u043e\u0432\u044b\u0439 \u043e\u0441\u043e\u0431\u044b\u0439 \u0433\u0440\u0430\u0444\u0438\u043a
+label.shedule.create-new-common.title=\u041d\u043e\u0432\u044b\u0439 \u043e\u0431\u044b\u0447\u043d\u044b\u0439 \u0433\u0440\u0430\u0444\u0438\u043a
 
 label.wcalendar.menu.calendar.btn=\u041f\u0440\u043e\u0438\u0437\u0432\u043e\u0434\u0441\u0442\u0432\u0435\u043d\u043d\u044b\u0439 \u043a\u0430\u043b\u0435\u043d\u0434\u0430\u0440\u044c
 label.wcalendar.menu.shedule.btn=\u0413\u0440\u0430\u0444\u0438\u043a \u0440\u0430\u0431\u043e\u0442\u044b
 label.wcalendar.menu.absence.btn=\u041e\u0442\u0441\u0443\u0442\u0441\u0442\u0432\u0438\u0435 \u0441\u043e\u0442\u0440\u0443\u0434\u043d\u0438\u043a\u043e\u0432
+
+label.absence.form.set.date-interval=\u041d\u0430\u0441\u0442\u0440\u043e\u0439\u043a\u0438 \u043f\u0440\u043e\u0434\u043e\u043b\u0436\u0438\u0442\u0435\u043b\u044c\u043d\u043e\u0441\u0442\u0438
+button.new-my-absence=\u0417\u0430\u043f\u043b\u0430\u043d\u0438\u0440\u043e\u0432\u0430\u0442\u044c \u043c\u043e\u0435 \u043e\u0442\u0441\u0443\u0442\u0441\u0442\u0432\u0438\u0435
+button.new-employee-absence=\u0417\u0430\u043f\u043b\u0430\u043d\u0438\u0440\u043e\u0432\u0430\u0442\u044c \u043e\u0442\u0441\u0443\u0442\u0441\u0442\u0432\u0438\u0435 \u0441\u043e\u0442\u0440\u0443\u0434\u043d\u0438\u043a\u0430
+label.absence.create-my-absence.title=\u041c\u043e\u0435 \u043d\u043e\u0432\u043e\u0435 \u043e\u0442\u0441\u0443\u0442\u0441\u0442\u0432\u0438\u0435
+label.absence.create-emloyee-absence.title=\u041d\u043e\u0432\u043e\u0435 \u043e\u0442\u0441\u0443\u0442\u0441\u0442\u0432\u0438\u0435 \u0441\u043e\u0442\u0440\u0443\u0434\u043d\u0438\u043a\u0430
