--- a/lecm-subscriptions/share/src/main/java/ru/it/lecm/subscriptions/subscriptions_ru.properties
+++ b/lecm-subscriptions/share/src/main/java/ru/it/lecm/subscriptions/subscriptions_ru.properties
@@ -18,3 +18,4 @@ header.subscriptions.label=\u041F\u043E\u0434\u043F\u0438\u0441\u043A\u0438
 header.subscriptions.description=\u041F\u043E\u0434\u043F\u0438\u0441\u043A\u0438
 info.destination=\u0410\u0434\u0440\u0435\u0441\u0430\u0442\u044B
 info.notification=\u0421\u043F\u043E\u0441\u043E\u0431\u044B \u0434\u043E\u0441\u0442\u0430\u0432\u043A\u0438
+label.form.cm-name=\u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
