--- a/lecm-business-journal/repo/src/main/config/messages/business-journal_ru.properties
+++ b/lecm-business-journal/repo/src/main/config/messages/business-journal_ru.properties
@@ -25,8 +25,8 @@ lecm-busjournal_businessJournalModel.association.lecm-busjournal_messageTemplate
 
 lecm-busjournal_businessJournalModel.type.lecm-busjournal_bjRecord.title=\u0417\u0430\u043F\u0438\u0441\u044C \u0431\u0438\u0437\u043D\u0435\u0441-\u0436\u0443\u0440\u043D\u0430\u043B\u0430
 lecm-busjournal_businessJournalModel.type.lecm-busjournal_bjRecord.description=\u0417\u0430\u043F\u0438\u0441\u044C \u0431\u0438\u0437\u043D\u0435\u0441-\u0436\u0443\u0440\u043D\u0430\u043B\u0430
-lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-date.title=\u0412\u0440\u0435\u043C\u044F
-lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-date.description=\u0412\u0440\u0435\u043C\u044F
+lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-date.title=\u0414\u0430\u0442\u0430
+lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-date.description=\u0414\u0430\u0442\u0430
 lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-description.title=\u041E\u043F\u0438\u0441\u0430\u043D\u0438\u0435
 lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-description.description=\u041E\u043F\u0438\u0441\u0430\u043D\u0438\u0435
 lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-mainObject.title=\u041E\u0441\u043D\u043E\u0432\u043D\u043E\u0439 \u043E\u0431\u044A\u0435\u043A\u0442
