--- a/lecm-business-journal/repo/src/main/config/messages/business-journal_ru.properties
+++ b/lecm-business-journal/repo/src/main/config/messages/business-journal_ru.properties
@@ -71,3 +71,8 @@ lecm-busjournal_businessJournalModel.property.lecm-busjournal_archiver-deep.titl
 lecm-busjournal_businessJournalModel.property.lecm-busjournal_archiver-deep.description=\u0410\u0440\u0445\u0438\u0432\u0438\u0440\u043E\u0432\u0430\u0442\u044C \u0432\u0441\u0435 \u0437\u0430\u043F\u0438\u0441\u0438 \u0441\u0442\u0430\u0440\u0448\u0435 N \u0434\u043D\u0435\u0439
 lecm-busjournal_businessJournalModel.property.lecm-busjournal_archiver-period.title=\u041F\u0435\u0440\u0438\u043E\u0434\u0438\u0447\u043D\u043E\u0441\u0442\u044C \u0437\u0430\u043F\u0443\u0441\u043A\u0430 \u0430\u0432\u0442\u043E\u043C\u0430\u0442\u0438\u0447\u0435\u0441\u043A\u043E\u0439 \u0430\u0440\u0445\u0438\u0432\u0430\u0446\u0438\u0438
 lecm-busjournal_businessJournalModel.property.lecm-busjournal_archiver-period.description=\u0417\u0430\u043F\u0443\u0441\u043A \u043E\u0434\u0438\u043D \u0440\u0430\u0437 \u0432 N \u0434\u043D\u0435\u0439
+
+lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-objType-assoc-text-content.title=\u0422\u0438\u043F \u043E\u0431\u044A\u0435\u043A\u0442\u0430
+lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-objType-assoc-text-content.description=\u0422\u0438\u043F \u043E\u0431\u044A\u0435\u043A\u0442\u0430
+lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-evCategory-assoc-text-content.title=\u041A\u0430\u0442\u0435\u0433\u043E\u0440\u0438\u044F \u0441\u043E\u0431\u044B\u0442\u0438\u0439
+lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-evCategory-assoc-text-content.description=\u041A\u0430\u0442\u0435\u0433\u043E\u0440\u0438\u044F \u0441\u043E\u0431\u044B\u0442\u0438\u0439
