--- a/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model_ru.properties
+++ b/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model_ru.properties
@@ -44,3 +44,4 @@ listconstraint.lecm-stmeditor_permissionType.full=\u0417\u0430\u043F\u0438\u0441
 listconstraint.lecm-stmeditor_toTypeList.FIELD=\u041F\u043E\u043B\u0435 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430
 listconstraint.lecm-stmeditor_fromTypeList.VARIABLE=\u041F\u0435\u0440\u0435\u043C\u0435\u043D\u043D\u0430\u044F \u043F\u0440\u043E\u0446\u0435\u0441\u0441\u0430
 listconstraint.lecm-stmeditor_fromTypeList.FIELD=\u041F\u043E\u043B\u0435 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430
+listconstraint.lecm-stmeditor_fromTypeList.VALUE=\u0417\u043D\u0430\u0447\u0435\u043D\u0438\u0435
