--- a/lecm-calendar/share/src/main/java/ru/it/lecm/wcalendar/form/form_ru.properties
+++ b/lecm-calendar/share/src/main/java/ru/it/lecm/wcalendar/form/form_ru.properties
@@ -66,6 +66,9 @@ label.absence.create-employee-absence.title=\u041d\u043e\u0432\u043e\u0435 \u043
 header.instant-absence.label=\u041c\u0435\u043d\u044f \u043d\u0435\u0442 \u0432 \u043e\u0444\u0438\u0441\u0435
 header.instant-absence.description=\u0417\u0430\u0444\u0438\u043a\u0441\u0438\u0440\u043e\u0432\u0430\u0442\u044c \u043c\u043e\u0435 \u043e\u0442\u0441\u0443\u0442\u0441\u0442\u0432\u0438\u0435 \u0432 \u043e\u0444\u0438\u0441\u0435
 label.absence.create-instant-absence.title=\u041c\u0435\u043d\u044f \u043d\u0435\u0442 \u0432 \u043e\u0444\u0438\u0441\u0435
+label.absence.form.out-of-office.back=\u042f \u0432\u0435\u0440\u043d\u0443\u0441\u044c
+label.absence.form.out-of-office.unlimited=\u041d\u0435 \u0437\u043d\u0430\u044e \u043a\u043e\u0433\u0434\u0430
+label.absence.form.out-of-office.reason=\u041f\u0440\u0438\u0447\u0438\u043d\u0430
 message.absence.new-instant.success=\u041e\u0442\u0441\u0443\u0442\u0441\u0442\u0432\u0438\u0435 \u0432 \u043e\u0444\u0438\u0441\u0435 \u0437\u0430\u0444\u0438\u043a\u0441\u0438\u0440\u043e\u0432\u0430\u043d\u043e
 message.absence.new-instant.failure=\u041e\u0428\u0418\u0411\u041a\u0410: \u043d\u0435\u0432\u043e\u0437\u043c\u043e\u0436\u043d\u043e \u0437\u0430\u0444\u0438\u043a\u0441\u0438\u0440\u043e\u0432\u0430\u0442\u044c \u043e\u0442\u0441\u0443\u0442\u0441\u0442\u0432\u0438\u0435
 
