--- a/lecm-calendar/repo/src/main/config/messages/calendar_ru.properties
+++ b/lecm-calendar/repo/src/main/config/messages/calendar_ru.properties
@@ -52,6 +52,10 @@ listconstraint.lecm-shed_shedule-types-constraint.SPECIAL=\u041e\u0441\u043e\u04
 lecm-shed_shedule-model.property.lecm-shed_std-begin.title=\u041d\u0430\u0447\u0430\u043b\u043e \u0440\u0430\u0431\u043e\u0442\u044b
 #<property name="lecm-shed:std-end">
 lecm-shed_shedule-model.property.lecm-shed_std-end.title=\u041a\u043e\u043d\u0435\u0446 \u0440\u0430\u0431\u043e\u0442\u044b
+#<property name="lecm-shed:time-limit-start">
+lecm-shed_shedule-model.property.lecm-shed_time-limit-start.title=\u041d\u0430\u0447\u0430\u043b\u043e \u0441\u0440\u043e\u043a\u0430 \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u044f \u0433\u0440\u0430\u0444\u0438\u043a\u0430
+#<property name="lecm-shed:time-limit-end">
+lecm-shed_shedule-model.property.lecm-shed_time-limit-end.title=\u041a\u043e\u043d\u0435\u0446 \u0441\u0440\u043e\u043a\u0430 \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u044f \u0440\u0430\u0441\u043f\u0438\u0441\u0430\u043d\u0438\u044f
 #<association name="lecm-shed:shed-employee-link-assoc">
 lecm-shed_shedule-model.association.lecm-shed_shed-employee-link-assoc.title=\u0421\u043e\u0442\u0440\u0443\u0434\u043d\u0438\u043a/\u043f\u043e\u0434\u0440\u0430\u0437\u0434\u0435\u043b\u0435\u043d\u0438\u0435
 #<child-association name="lecm-shed:contains-element">
