--- a/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model_ru.properties
+++ b/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model_ru.properties
@@ -35,7 +35,7 @@ lecm-stmeditor_model.property.lecm-stmeditor_archiveFolder.title=\u0410\u0440\u0
 lecm-stmeditor_model.association.lecm-stmeditor_role-assoc.title=\u0411\u0438\u0437\u043D\u0435\u0441 \u0440\u043E\u043B\u044C
 lecm-stmeditor_model.property.lecm-stmeditor_rolesFolder.title=\u0411\u0438\u0437\u043D\u0435\u0441-\u0440\u043E\u043B\u0438 \u043C\u0430\u0448\u0438\u043D\u044B \u0441\u043E\u0441\u0442\u043E\u044F\u043D\u0438\u0439
 lecm-stmeditor_model.property.lecm-stmeditor_creationDocument.title=\u0421\u043E\u0437\u0434\u0430\u0442\u0435\u043B\u044C
-lecm-stmeditor_model.property.lecm-stmeditor_staticRoles.title=\u0421\u0442\u0430\u0442\u0438\u0447\u043D\u044B\u0435 \u0440\u043E\u043B\u0438
+lecm-stmeditor_model.property.lecm-stmeditor_staticRoles.title=\u0421\u0442\u0430\u0442\u0438\u0447\u0435\u0441\u043A\u0438\u0435 \u0440\u043E\u043B\u0438
 lecm-stmeditor_model.property.lecm-stmeditor_dynamicRoles.title=\u0414\u0438\u043D\u0430\u043C\u0438\u0447\u0435\u0441\u043A\u0438\u0435 \u0440\u043E\u043B\u0438
 lecm-stmeditor_model.property.lecm-stmeditor_permissionTypeValue.title=\u0414\u043E\u0441\u0442\u0443\u043F
 listconstraint.lecm-stmeditor_permissionType.noaccess=\u041D\u0435\u0442 \u0434\u043E\u0441\u0442\u0443\u043F\u0430
