--- a/lecm-dictionary-test/repo/src/main/config/messages/dictionary-test_ru.properties
+++ b/lecm-dictionary-test/repo/src/main/config/messages/dictionary-test_ru.properties
@@ -12,3 +12,5 @@ lecm-dic-orgstr-test_dictionaryOrgstructureTest.association.lecm-dic-orgstr-test
 lecm-dic-orgstr-test_dictionaryOrgstructureTest.association.lecm-dic-orgstr-test_workGroup.title=\u0412\u044B\u0431\u043E\u0440 \u0440\u0430\u0431\u043E\u0447\u0435\u0439 \u0433\u0440\u0443\u043F\u043F\u044B
 lecm-dic-orgstr-test_dictionaryOrgstructureTest.association.lecm-dic-orgstr-test_employee.title=\u0412\u044B\u0431\u043E\u0440 \u0441\u043E\u0442\u0440\u0443\u0434\u043D\u0438\u043A\u0430
 lecm-dic-orgstr-test_dictionaryOrgstructureTest.association.lecm-dic-orgstr-test_workRole.title=\u0412\u044B\u0431\u043E\u0440 \u0440\u043E\u043B\u0435\u0439 \u0432 \u0433\u0440\u0443\u043F\u043F\u0435
+
+lecm-dic-address_dictionaryAddress.property.lecm-dic-address_prefix.title=\u041F\u0440\u0435\u0444\u0438\u043A\u0441
