--- a/lecm-business-journal/repo/src/main/config/messages/business-journal_ru.properties
+++ b/lecm-business-journal/repo/src/main/config/messages/business-journal_ru.properties
@@ -6,6 +6,8 @@ lecm-busjournal_businessJournalModel.property.lecm-busjournal_objectType-class.t
 lecm-busjournal_businessJournalModel.property.lecm-busjournal_objectType-class.description=\u041A\u043B\u0430\u0441\u0441
 lecm-busjournal_businessJournalModel.property.lecm-busjournal_objectType-template.title=\u0428\u0430\u0431\u043B\u043E\u043D \u043F\u0440\u0435\u0434\u0441\u0442\u0430\u0432\u043B\u0435\u043D\u0438\u044F
 lecm-busjournal_businessJournalModel.property.lecm-busjournal_objectType-template.description=\u0428\u0430\u0431\u043B\u043E\u043D \u043F\u0440\u0435\u0434\u0441\u0442\u0430\u0432\u043B\u0435\u043D\u0438\u044F
+lecm-busjournal_businessJournalModel.property.lecm-busjournal_objectType-list-template.title=\u0428\u0430\u0431\u043B\u043E\u043D \u043F\u0440\u0435\u0434\u0441\u0442\u0430\u0432\u043B\u0435\u043D\u0438\u044F \u0434\u043B\u044F \u0441\u043F\u0438\u0441\u043A\u0430
+lecm-busjournal_businessJournalModel.property.lecm-busjournal_objectType-list-template.description=\u0428\u0430\u0431\u043B\u043E\u043D \u043F\u0440\u0435\u0434\u0441\u0442\u0430\u0432\u043B\u0435\u043D\u0438\u044F \u0434\u043B\u044F \u0441\u043F\u0438\u0441\u043A\u0430
 
 lecm-busjournal_businessJournalModel.type.lecm-busjournal_eventCategory.title=\u041A\u0430\u0442\u0435\u0433\u043E\u0440\u0438\u044F \u0441\u043E\u0431\u044B\u0442\u0438\u044F
 lecm-busjournal_businessJournalModel.type.lecm-busjournal_eventCategory.description=\u041A\u0430\u0442\u0435\u0433\u043E\u0440\u0438\u044F \u0441\u043E\u0431\u044B\u0442\u0438\u044F
