--- a/lecm-documents/share/src/main/java/ru/it/lecm/documents/form_ru.properties
+++ b/lecm-documents/share/src/main/java/ru/it/lecm/documents/form_ru.properties
@@ -1,5 +1,5 @@
 page.lecm.document.title=\u0414\u043E\u043A\u0443\u043C\u0435\u043D\u0442
-page.lecm.document.description=\u041A\u0430\u0440\u0442\u043E\u0447\u043A\u0430 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430
+page.lecm.document.description=\u041E\u0441\u043D\u043E\u0432\u043D\u044B\u0435 \u0441\u0432\u0435\u0434\u0435\u043D\u0438\u044F
 
 info.connections=\u0421\u0432\u044F\u0437\u0438
 button.connection.add=\u0421\u043E\u0437\u0434\u0430\u043D\u0438\u0435 \u0441\u0432\u044F\u0437\u0438
