--- a/lecm-documents/share/src/main/java/ru/it/lecm/documents/form_ru.properties
+++ b/lecm-documents/share/src/main/java/ru/it/lecm/documents/form_ru.properties
@@ -5,6 +5,7 @@ page.lecm.document.attachment.title=\u0412\u043B\u043E\u0436\u0435\u043D\u0438\u
 page.lecm.document.attachment.description=\u041E\u0441\u043D\u043E\u0432\u043D\u044B\u0435 \u0441\u0432\u0435\u0434\u0435\u043D\u0438\u044F
 
 title.documents=\u0414\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u044B
+title.attachments=\u0412\u043B\u043E\u0436\u0435\u043D\u0438\u044F
 
 info.connections=\u0421\u0432\u044F\u0437\u0438
 button.connection.add=\u0421\u043E\u0437\u0434\u0430\u043D\u0438\u0435 \u0441\u0432\u044F\u0437\u0438
