--- a/lecm-contracts/share/src/main/java/ru/it/lecm/contracts/contracts_ru.properties
+++ b/lecm-contracts/share/src/main/java/ru/it/lecm/contracts/contracts_ru.properties
@@ -1,2 +1,3 @@
 page.contracts.title=\u0414\u043E\u0433\u043E\u0432\u043E\u0440\u0430
 page.contracts.filter.label=(\u0441\u043E\u0434\u0435\u0440\u0436\u0438\u043C\u043E\u0435 \u043E\u0442\u0444\u0438\u043B\u044C\u0442\u0440\u043E\u0432\u0430\u043D\u043E)
+header.contracts.label=\u0414\u043E\u0433\u043E\u0432\u043E\u0440\u0430
