--- a/lecm-documents/share/src/main/java/ru/it/lecm/documents/form_ru.properties
+++ b/lecm-documents/share/src/main/java/ru/it/lecm/documents/form_ru.properties
@@ -27,3 +27,7 @@ label.member.add.title=\u0414\u043E\u0431\u0430\u0432\u043B\u0435\u043D\u0438\u0
 lecm-doc-members_member-fio=\u0424\u0418\u041E
 lecm-doc-members_member-unit=\u041F\u043E\u0434\u0440\u0430\u0437\u0434\u0435\u043B\u0435\u043D\u0438\u0435
 lecm-doc-members_member-position=\u041F\u043E\u0437\u0438\u0446\u0438\u044F
+
+label.attachmets.file.name=\u0418\u043C\u044F \u0444\u0430\u0439\u043B\u0430
+label.attachmets.autor=\u0410\u0432\u0442\u043E\u0440
+label.attachmets.version=\u0412\u0435\u0440\u0441\u0438\u044F
