--- a/lecm-documents/repo/src/main/config/messages/lecm-documents_ru.properties
+++ b/lecm-documents/repo/src/main/config/messages/lecm-documents_ru.properties
@@ -19,3 +19,11 @@ lecm-doc-members_model.property.lecm-doc-members_group.title=\u0413\u0440\u0443\
 lecm-doc-members_model.property.lecm-doc-members_group.description=\u0413\u0440\u0443\u043F\u043F\u0430 \u043F\u0440\u0438\u0432\u0438\u043B\u0435\u0433\u0438\u0439
 lecm-doc-members_model.association.lecm-doc-members_employee-assoc.title=\u0421\u043E\u0442\u0440\u0443\u0434\u043D\u0438\u043A
 lecm-doc-members_model.association.lecm-doc-members_employee-assoc.description=\u0421\u043E\u0442\u0440\u0443\u0434\u043D\u0438\u043A
+
+statemachine.state.privileges.INITIATOR=\u0418\u043D\u0438\u0446\u0438\u0430\u0442\u043E\u0440
+statemachine.state.privileges.CORRECTOR=\u041A\u043E\u0440\u0440\u0435\u043A\u0442\u043E\u0440
+statemachine.state.privileges.READER=\u0427\u0438\u0442\u0430\u0442\u0435\u043B\u044C
+statemachine.state.privileges.OWNER=\u0421\u043E\u0431\u0441\u0442\u0432\u0435\u043D\u043D\u0438\u043A
+statemachine.state.privileges.RESPONSIBLE=\u041E\u0442\u0432\u0435\u0442\u0441\u0442\u0432\u0435\u043D\u043D\u044B\u0439 \u0440\u0430\u0431\u043E\u0442\u043D\u0438\u043A
+statemachine.state.privileges.STAFF=\u0420\u0430\u0431\u043E\u0442\u043D\u0438\u043A
+statemachine.state.privileges.REVIEWER=\u0420\u0435\u0446\u0435\u043D\u0437\u0435\u043D\u0442
