--- a/lecm-documents/repo/src/main/config/messages/lecm-documents_ru.properties
+++ b/lecm-documents/repo/src/main/config/messages/lecm-documents_ru.properties
@@ -1,29 +1,32 @@
-lecm-connect_dictionary-connection.type.lecm-connect_connection.title=\u0421\u0432\u044F\u0437\u0438
-lecm-connect_dictionary-connection.association.lecm-connect_primary-document-assoc.title=\u0418\u0441\u0445\u043E\u0434\u043D\u044B\u0439 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442
-lecm-connect_dictionary-connection.association.lecm-connect_connected-document-assoc.title=\u0421\u0432\u044F\u0437\u0430\u043D\u043D\u044B\u0439 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442
-lecm-connect_dictionary-connection.association.lecm-connect_connection-type-assoc.title=\u0422\u0438\u043F \u0441\u0432\u044F\u0437\u0438
+lecm-document_model.property.lecm-document_regnum.title=\u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u043e\u043d\u043d\u044b\u0439 \u043d\u043e\u043c\u0435\u0440
+lecm-document_model.property.lecm-document_regnum.description=\u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u043e\u043d\u043d\u044b\u0439 \u043d\u043e\u043c\u0435\u0440
 
-lecm-connect-types_dictionary-connection-types.type.lecm-connect-types_connection-type.title=\u0422\u0438\u043F \u0441\u0432\u044F\u0437\u0438
-lecm-connect-types_dictionary-connection-types.property.lecm-connect-types_reverse-name.title=\u0420\u0435\u0432\u0435\u0440\u0441\u0438\u0432\u043D\u043E\u0435 \u0438\u043C\u044F
-lecm-connect-types_dictionary-connection-types.property.lecm-connect-types_code.title=\u041A\u043E\u0434
+lecm-connect_dictionary-connection.type.lecm-connect_connection.title=\u0421\u0432\u044f\u0437\u0438
+lecm-connect_dictionary-connection.association.lecm-connect_primary-document-assoc.title=\u0418\u0441\u0445\u043e\u0434\u043d\u044b\u0439 \u0434\u043e\u043a\u0443\u043c\u0435\u043d\u0442
+lecm-connect_dictionary-connection.association.lecm-connect_connected-document-assoc.title=\u0421\u0432\u044f\u0437\u0430\u043d\u043d\u044b\u0439 \u0434\u043e\u043a\u0443\u043c\u0435\u043d\u0442
+lecm-connect_dictionary-connection.association.lecm-connect_connection-type-assoc.title=\u0422\u0438\u043f \u0441\u0432\u044f\u0437\u0438
 
-lecm-connect-types_dictionary-connection-types.type.lecm-connect-types_available-connection-type.title=\u0414\u043E\u0441\u0442\u0443\u043F\u043D\u044B\u0435 \u0442\u0438\u043F\u044B \u0441\u0432\u044F\u0437\u0438
-lecm-connect-types_dictionary-connection-types.property.lecm-connect-types_primary-document-type.title=\u0422\u0438\u043F \u0438\u0441\u0445\u043E\u0434\u043D\u043E\u0433\u043E \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430
-lecm-connect-types_dictionary-connection-types.property.lecm-connect-types_connected-document-type.title=\u0422\u0438\u043F \u0441\u0432\u044F\u0437\u0430\u043D\u043D\u043E\u0433\u043E \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430
-lecm-connect-types_dictionary-connection-types.association.lecm-connect-types_available-connection-types-assoc.title=\u0414\u043E\u0441\u0442\u0443\u043F\u043D\u044B\u0435 \u0442\u0438\u043F\u044B \u0441\u0432\u044F\u0437\u0438
-lecm-connect-types_dictionary-connection-types.association.lecm-connect-types_default-connection-type-assoc.title=\u0422\u0438\u043F \u0441\u0432\u044F\u0437\u0438 \u043F\u043E \u0443\u043C\u043E\u043B\u0447\u0430\u043D\u0438\u044E
+lecm-connect-types_dictionary-connection-types.type.lecm-connect-types_connection-type.title=\u0422\u0438\u043f \u0441\u0432\u044f\u0437\u0438
+lecm-connect-types_dictionary-connection-types.property.lecm-connect-types_reverse-name.title=\u0420\u0435\u0432\u0435\u0440\u0441\u0438\u0432\u043d\u043e\u0435 \u0438\u043c\u044f
+lecm-connect-types_dictionary-connection-types.property.lecm-connect-types_code.title=\u041a\u043e\u0434
 
-lecm-doc-members_model.type.lecm-doc-members_member.title=\u0423\u0447\u0430\u0441\u0442\u043D\u0438\u043A
-lecm-doc-members_model.type.lecm-doc-members_member.description=\u0423\u0447\u0430\u0441\u0442\u043D\u0438\u043A
-lecm-doc-members_model.property.lecm-doc-members_group.title=\u0413\u0440\u0443\u043F\u043F\u0430 \u043F\u0440\u0438\u0432\u0438\u043B\u0435\u0433\u0438\u0439
-lecm-doc-members_model.property.lecm-doc-members_group.description=\u0413\u0440\u0443\u043F\u043F\u0430 \u043F\u0440\u0438\u0432\u0438\u043B\u0435\u0433\u0438\u0439
-lecm-doc-members_model.association.lecm-doc-members_employee-assoc.title=\u0421\u043E\u0442\u0440\u0443\u0434\u043D\u0438\u043A
-lecm-doc-members_model.association.lecm-doc-members_employee-assoc.description=\u0421\u043E\u0442\u0440\u0443\u0434\u043D\u0438\u043A
+lecm-connect-types_dictionary-connection-types.type.lecm-connect-types_available-connection-type.title=\u0414\u043e\u0441\u0442\u0443\u043f\u043d\u044b\u0435 \u0442\u0438\u043f\u044b \u0441\u0432\u044f\u0437\u0438
+lecm-connect-types_dictionary-connection-types.property.lecm-connect-types_primary-document-type.title=\u0422\u0438\u043f \u0438\u0441\u0445\u043e\u0434\u043d\u043e\u0433\u043e \u0434\u043e\u043a\u0443\u043c\u0435\u043d\u0442\u0430
+lecm-connect-types_dictionary-connection-types.property.lecm-connect-types_connected-document-type.title=\u0422\u0438\u043f \u0441\u0432\u044f\u0437\u0430\u043d\u043d\u043e\u0433\u043e \u0434\u043e\u043a\u0443\u043c\u0435\u043d\u0442\u0430
+lecm-connect-types_dictionary-connection-types.association.lecm-connect-types_available-connection-types-assoc.title=\u0414\u043e\u0441\u0442\u0443\u043f\u043d\u044b\u0435 \u0442\u0438\u043f\u044b \u0441\u0432\u044f\u0437\u0438
+lecm-connect-types_dictionary-connection-types.association.lecm-connect-types_default-connection-type-assoc.title=\u0422\u0438\u043f \u0441\u0432\u044f\u0437\u0438 \u043f\u043e \u0443\u043c\u043e\u043b\u0447\u0430\u043d\u0438\u044e
 
-statemachine.state.privileges.INITIATOR=\u0418\u043D\u0438\u0446\u0438\u0430\u0442\u043E\u0440
-statemachine.state.privileges.CORRECTOR=\u041A\u043E\u0440\u0440\u0435\u043A\u0442\u043E\u0440
-statemachine.state.privileges.READER=\u0427\u0438\u0442\u0430\u0442\u0435\u043B\u044C
-statemachine.state.privileges.OWNER=\u0421\u043E\u0431\u0441\u0442\u0432\u0435\u043D\u043D\u0438\u043A
-statemachine.state.privileges.RESPONSIBLE=\u041E\u0442\u0432\u0435\u0442\u0441\u0442\u0432\u0435\u043D\u043D\u044B\u0439 \u0440\u0430\u0431\u043E\u0442\u043D\u0438\u043A
-statemachine.state.privileges.STAFF=\u0420\u0430\u0431\u043E\u0442\u043D\u0438\u043A
-statemachine.state.privileges.REVIEWER=\u0420\u0435\u0446\u0435\u043D\u0437\u0435\u043D\u0442
+lecm-doc-members_model.type.lecm-doc-members_member.title=\u0423\u0447\u0430\u0441\u0442\u043d\u0438\u043a
+lecm-doc-members_model.type.lecm-doc-members_member.description=\u0423\u0447\u0430\u0441\u0442\u043d\u0438\u043a
+lecm-doc-members_model.property.lecm-doc-members_group.title=\u0413\u0440\u0443\u043f\u043f\u0430 \u043f\u0440\u0438\u0432\u0438\u043b\u0435\u0433\u0438\u0439
+lecm-doc-members_model.property.lecm-doc-members_group.description=\u0413\u0440\u0443\u043f\u043f\u0430 \u043f\u0440\u0438\u0432\u0438\u043b\u0435\u0433\u0438\u0439
+lecm-doc-members_model.association.lecm-doc-members_employee-assoc.title=\u0421\u043e\u0442\u0440\u0443\u0434\u043d\u0438\u043a
+lecm-doc-members_model.association.lecm-doc-members_employee-assoc.description=\u0421\u043e\u0442\u0440\u0443\u0434\u043d\u0438\u043a
+
+statemachine.state.privileges.INITIATOR=\u0418\u043d\u0438\u0446\u0438\u0430\u0442\u043e\u0440
+statemachine.state.privileges.CORRECTOR=\u041a\u043e\u0440\u0440\u0435\u043a\u0442\u043e\u0440
+statemachine.state.privileges.READER=\u0427\u0438\u0442\u0430\u0442\u0435\u043b\u044c
+statemachine.state.privileges.OWNER=\u0421\u043e\u0431\u0441\u0442\u0432\u0435\u043d\u043d\u0438\u043a
+statemachine.state.privileges.RESPONSIBLE=\u041e\u0442\u0432\u0435\u0442\u0441\u0442\u0432\u0435\u043d\u043d\u044b\u0439 \u0440\u0430\u0431\u043e\u0442\u043d\u0438\u043a
+statemachine.state.privileges.STAFF=\u0420\u0430\u0431\u043e\u0442\u043d\u0438\u043a
+statemachine.state.privileges.REVIEWER=\u0420\u0435\u0446\u0435\u043d\u0437\u0435\u043d\u0442
